ready to upload

--- a/page2.html
+++ b/page2.html
@@ -15,10 +15,8 @@
     </head>
     <body>
         <header> 
-         <!--inline styling for the image to the logo-->
          <img class="logoImg" style="margin-right:10px;" src="images/favicon-96x96.png" alt="logo" width="150" height="100">
             <h1>New2Dance</h1>
-                    <!--navigation/menu goes here-->
                     <nav>
                      <ul>
                          <li><a href="index.html">Home</a></li>
@@ -35,7 +33,7 @@
 
         <h2>Classical Ballet</h2>
         <section class="col_detail">
-            <img class="col-images" src="images/ballerina.jpg" alt="ballet dancer leg kick">
+            <img class="col-images" src="images/ballerina.jpg" alt="ballerina dancing">
             <p> Classical ballet developed in the late 19th century when Marius Petipa was ballet master in St Petersburg. Classical ballet is a mixture of the French style of Romantic ballet, the techniques developed in Italy in the late 19th century, and Russian teaching.</p>
              <p>Today, Swan Lake is one of the most famous and popular of all ballets, yet the first version in Moscow in 1877 flopped. Choreographer Wenzel Reisinger, used to making dances to simple rhythms and easy tunes, simply could not cope with Tchaikovsky’s elaborate, symphonic-style score.
                 <a target="_blank" href="http://www.vam.ac.uk/content/articles/c/classic-ballet/#:~:text=Classical%20ballet%20developed%20in%20the,19th%20century%2C%20and%20Russian%20teaching.">More history here ..</a>
@@ -55,7 +53,7 @@
     <section class="sectionDisplay">
       <h2>Hip-Hop history</h2>
       <section class="col_detail">
-        <img class="col-images" src="images/breakdancing.jpg" alt="headspin in group" >
+        <img class="col-images" src="images/breakdancing.jpg" alt="breakdancing on street" >
          <p>Although widely considered a synonym for rap music, the term hip-hop refers to a complex culture comprising four elements: deejaying, or “turntabling”; rapping, also known as “MCing” or “rhyming”; graffiti painting, also known as “graf” or “writing”; and “B-boying,” which encompasses hip-hop dance, style, and attitude, along with the sort of virile body language that philosopher Cornel West described as “postural semantics.” (A fifth element, “knowledge of self/consciousness,” is sometimes added to the list of hip-hop elements, particularly by socially conscious hip-hop artists and scholars.) Hip-hop originated in the predominantly African American economically depressed South Bronx section of New York City in the late 1970s. As the hip-hop movement began at society’s margins, its origins are shrouded in myth, enigma, and obfuscation.
             <a target="_blank" href="hhttps://www.britannica.com/art/hip-hop">More history here ..</a>
          </p>      
